--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -26,6 +26,33 @@
                         <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Ports
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formPorts}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Polices
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formPolices}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Releves
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formReleves}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="navbar-nav mx-3">
 
@@ -44,5 +71,6 @@
 <section layout:fragment="content1">
 
 </section>
+<footer>jjj</footer>
 </body>
 </html>
