--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -106,6 +106,55 @@
                         <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        TypePolices
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formTypesPolices}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        EnteteFactures
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formEnteteFactures}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        DetailsFactures
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formDetailsFacture.html}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav mx-3">
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        [user]
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formClients}">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav mx-3">
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        [user]
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formClients}">Logout</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="navbar-nav mx-3">
 
