--- a/src/main/resources/templates/formEnteteFacture.html
+++ b/src/main/resources/templates/formEnteteFacture.html
@@ -15,26 +15,42 @@
             <div class="card-header">New Facture</div>
             <div class="card-body">
                 <form th:action="@{/saveEnteteFacture}" th:object="${enteteFacture}" method="post">
+                    <input type="hidden" th:field="*{id}"> <!-- Hidden field for ID -->
+
                     <div class="form-group">
                         <label>Montant HT</label>
                         <input type="text" th:field="*{montantHT}" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label>Date Emission</label>
-                        <input type="date" th:field="*{dateEmission}" class="form-control">
+                        <label>Montant TTC</label>
+                        <input type="text" th:field="*{montantTTC}" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label>Date Paiement</label>
-                        <input type="date" th:field="*{datePaiement}" class="form-control">
+                        <label>Montant TVA</label>
+                        <input type="text" th:field="*{montantTVA}" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label>Date Annulation</label>
-                        <input type="date" th:field="*{dateAnnulation}" class="form-control">
+                        <label>Montant TTR</label>
+                        <input type="text" th:field="*{montantTTR}" class="form-control">
                     </div>
+<!--                    <div class="form-group">-->
+<!--                        <label>Date Emission</label>-->
+<!--                        <input type="date" th:field="*{dateEmission}" class="form-control">-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label>Date Paiement</label>-->
+<!--                        <input type="date" th:field="*{datePaiement}" class="form-control">-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label>Date Annulation</label>-->
+<!--                        <input type="date" th:field="*{dateAnnulation}" class="form-control">-->
+<!--                    </div>-->
                     <div class="form-group">
-                        <label>Client</label>
-                        <select th:field="*{client}" class="form-control">
-                            <option th:each="c : ${listClients}" th:value="${c}" th:text="${c.nom}"></option>
+                        <label for="client">Client</label>
+                        <select th:field="*{client}" class="form-control" id="client">
+                            <option th:each="client : ${clients}"
+                                    th:value="${client.id}"
+                                    th:text="${client.nom}"></option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-success mt-2">Save</button>
