--- a/src/main/resources/templates/ports.html
+++ b/src/main/resources/templates/ports.html
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a class="btn btn-success mt-2" th:href="@{/formPort}">Add New Port</a>
+                <a class="btn btn-success mt-2" th:href="@{/formPorts}">Add New Port</a>
             </div>
         </div>
     </div>
