--- a/src/main/resources/templates/editEnteteFacture.html
+++ b/src/main/resources/templates/editEnteteFacture.html
@@ -20,29 +20,43 @@
                     <input type="hidden" th:field="*{id}"> <!-- Hidden field for ID -->
 
                     <div class="form-group">
-                        <label for="montantHT">Montant HT:</label>
-                        <input type="text" th:field="*{montantHT}" class="form-control" id="montantHT">
+                        <label>Montant HT</label>
+                        <input type="text" th:field="*{montantHT}" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Montant TTC</label>
+                        <input type="text" th:field="*{montantTTC}" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Montant TVA</label>
+                        <input type="text" th:field="*{montantTVA}" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Montant TTR</label>
+                        <input type="text" th:field="*{montantTTR}" class="form-control">
                     </div>
 
-                    <div class="form-group">
-                        <label for="dateEmission">Date Emission:</label>
-                        <input type="date" th:field="*{dateEmission}" class="form-control" id="dateEmission">
-                    </div>
+<!--                    <div class="form-group">-->
+<!--                        <label for="dateEmission">Date Emission:</label>-->
+<!--                        <input type="date" th:field="*{dateEmission}" class="form-control" id="dateEmission">-->
+<!--                    </div>-->
+
+<!--                    <div class="form-group">-->
+<!--                        <label for="datePaiement">Date Paiement:</label>-->
+<!--                        <input type="date" th:field="*{datePaiement}" class="form-control" id="datePaiement">-->
+<!--                    </div>-->
+
+<!--                    <div class="form-group">-->
+<!--                        <label for="dateAnnulation">Date Annulation:</label>-->
+<!--                        <input type="date" th:field="*{dateAnnulation}" class="form-control" id="dateAnnulation">-->
+<!--                    </div>-->
 
                     <div class="form-group">
-                        <label for="datePaiement">Date Paiement:</label>
-                        <input type="date" th:field="*{datePaiement}" class="form-control" id="datePaiement">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="dateAnnulation">Date Annulation:</label>
-                        <input type="date" th:field="*{dateAnnulation}" class="form-control" id="dateAnnulation">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="client">Client:</label>
+                        <label for="client">Client</label>
                         <select th:field="*{client}" class="form-control" id="client">
-                            <option th:each="c : ${listClients}" th:value="${c.id}" th:text="${c.nom}"></option>
+                            <option th:each="client : ${clients}"
+                                    th:value="${client.id}"
+                                    th:text="${client.nom}"></option>
                         </select>
                     </div>
 
