--- a/src/main/resources/templates/releve.html
+++ b/src/main/resources/templates/releve.html
@@ -17,9 +17,9 @@
             <div class="card-body">
                 <form th:action="@{/releves}" method="get" class="mb-3">
                     <label>Start Date</label>
-                    <input type="date" name="startDate" th:value="${startDate}" class="form-control mb-2">
+                    <input type="date" name="startDate"  class="form-control mb-2">
                     <label>End Date</label>
-                    <input type="date" name="endDate" th:value="${endDate}" class="form-control mb-2">
+                    <input type="date" name="endDate"  class="form-control mb-2">
                     <button class="btn btn-primary mt-2" type="submit">Search</button>
                 </form>
                 <table class="table table-striped shadow">
@@ -53,13 +53,7 @@
                     </tr>
                     </tbody>
                 </table>
-                <nav>
-                    <ul class="pagination">
-                        <li th:each="page, status : ${#numbers.sequence(0, pages - 1)}">
-                            <a th:text="${page + 1}" th:classappend="${page == currentPage} ? ' active'" th:href="@{/releves(page=${page},startDate=${startDate},endDate=${endDate})}" class="page-link"></a>
-                        </li>
-                    </ul>
-                </nav>
+
                 <a class="btn btn-success mt-2" th:href="@{/formReleve}">Add New Releve</a>
             </div>
         </div>
