--- a/src/main/resources/templates/typePolice.html
+++ b/src/main/resources/templates/typePolice.html
@@ -41,13 +41,13 @@
                     </tr>
                     </tbody>
                 </table>
-                <nav>
-                    <ul class="pagination">
-                        <li th:each="page, status : ${#numbers.sequence(0, pages - 1)}">
-                            <a th:text="${page + 1}" th:classappend="${page == currentPage} ? ' active'" th:href="@{/typePolices(page=${page},keyword=${keyword})}" class="page-link"></a>
-                        </li>
-                    </ul>
-                </nav>
+<!--                <nav>-->
+<!--                    <ul class="pagination">-->
+<!--                        <li th:each="page, status : ${#numbers.sequence(0, pages - 1)}">-->
+<!--                            <a th:text="${page + 1}" th:classappend="${page == currentPage} ? ' active'" th:href="@{/typePolices(page=${page},keyword=${keyword})}" class="page-link"></a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </nav>-->
                 <a class="btn btn-success mt-2" th:href="@{/formTypePolice}">Add New TypePolice</a>
             </div>
         </div>
